--- a/LGK.Gecko/appsettings.Development.json
+++ b/LGK.Gecko/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source=192.168.31.165,1433;Initial Catalog=LGK;User Id=sa;Password=SQLAccess=01;Trusted_Connection=true;Encrypt=True;TrustServerCertificate=True;integrated security=false;"
   }
 }
