--- a/LGK.Gecko/appsettings.json
+++ b/LGK.Gecko/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=192.168.31.165,1433;Initial Catalog=LGK;User Id=sa;Password=SQLAccess=01;Trusted_Connection=true;Encrypt=True;TrustServerCertificate=True;integrated security=false;"
+  }
 }
